Bug 388515 - Inconsistent font styles in kcm_sddm
Summary: Inconsistent font styles in kcm_sddm
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 5.11.5
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-04 08:57 UTC by Florian
Modified: 2018-01-15 11:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.0
Sentry Crash Report:


Attachments
Screenshot of kcm_sddm and other component (155.15 KB, image/png)
2018-01-04 08:57 UTC, Florian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian 2018-01-04 08:57:49 UTC
Created attachment 109658 [details]
Screenshot of kcm_sddm and other component

It's a minor thing, but it looks weird to me and doesn't feel "complete":

The font styles at kcm_sddm differ from all other systemsettings components. The headline is bigger and bold, the subheading is also bigger. See attached screenshot.
Comment 1 Kai Uwe Broulik 2018-01-15 11:32:38 UTC
Git commit 6e74b46c98572cf712c4b98f835dce8c0b605669 by Kai Uwe Broulik.
Committed on 15/01/2018 at 11:32.
Pushed by broulik into branch 'master'.

Use smaller non-italic font for system settings module authentication message

This makes it consistent with regular headers without authentication required.
It was still using bold for the header and italic for the sub text.
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D9649

M  +1    -1    core/ModuleView.cpp

https://commits.kde.org/systemsettings/6e74b46c98572cf712c4b98f835dce8c0b605669