Use smaller non-italic font for system settings module authentication message

This makes it consistent with regular headers without authentication required.
It was still using bold for the header and italic for the sub text.

BUG: 388515
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D9649